# udm__Design__Patterns_in_Modern__CPP

./: CMakeLists.txt  README.md
02_SOLID_Design_principles/: 003_Single_Responsibility_Principle.cpp  004_Open-Closed_Principle.cpp  005_Liskov_Substitution_Principle.cpp  006_Interface_Segregation_Principle.cpp  007_Dependency_Inversion_Principle.cpp  CMakeLists.txt
03_Builder/: 011_Life_Without_Builders.cpp  014_Groovy-Style_Builder.cpp  901_Builder_Coding_Exercise.cpp  CMakeLists.txt
04_Factories/: 019_Factory_Method.cpp  020_Factory.cpp  021_Inner_Factory.cpp  CMakeLists.txt
05_Prototype/: 026_Record_Keeping.cpp  CMakeLists.txt
06_Singleton/: 037_Multiton.cpp  CMakeLists.txt  Singleton.h
07_Adapter/: 901_Adapter_Coding_Exercise.cpp  CMakeLists.txt
08_Bridge/: 046_Bridge_Implementation.cpp  047_BridgeCodingExercise_Test.cpp  047_Bridge_Coding_Exercise.cpp  CMakeLists.txt
09_Composite/: 049_Geometric_Shapes.cpp  050_Neural_Networks.cpp  051_Array-Backed_Properties.cpp  052_Composite_Coding_Exercise.cpp  CMakeLists.txt
10_Decorator/: 054_Dynamic_Decorator.cpp  057_Decorator_Coding_Exercise.cpp  057_Decorator_Coding_Exercise_Test.cpp  CMakeLists.txt
11_Facade/: CMakeLists.txt
12_Flyweight/: 062_Handmade_Flyweight.cpp  064_Text_Formatting.cpp  065_Flyweight_Coding_Exercise.cpp  065_Flyweight_Coding_Exercise_Test.cpp  CMakeLists.txt
13_Proxy/: 067_Smart_Pointers.cpp  072_Proxy_Coding_Exercise.cpp  072_Proxy_Coding_Exercise_Test.cpp  CMakeLists.txt
14_Chain_of_Responsibility/: 074_Pointer_Chain.cpp  075_Broker_Chain.cpp  076_Chain_of_Responsibility_Coding_Exercise.cpp  076_Chain_of_Responsibility_Coding_Exercise_Test.cpp  CMakeLists.txt
15_Command/: 079_Undo_Operations.cpp  081_Command_Coding_Exercise.cpp  CMakeLists.txt  (+1 more)
(+55 files in other folders)
